[package]
name = "shoco-sys"
repository = "https://github.com/ajmwagar/shoco-rs"
description = "FFI Bindings to shoco"
license = "MIT"
version = "1.0.0"
authors = ["Avery Wagar <awagar@cfchildren.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.50"

